# video_cut

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  cut.py  graphcut_example.cpp  video_read_test.cpp
UI/: CenterWidget.cpp  CenterWidget.h  PaintWidget.cpp  PaintWidget.h  VideoCut.cpp  VideoCut.h  VideoCut.ui  VideoDecoder.cpp  VideoDecoder.h  cmd_test.cpp  main.cpp
cmake/: FindFFmpeg.cmake
meta/: schedule.md  settings.md  ui.md
meta/doc/: schedule.md
meta/report/: report.md
